修改接口文档信息